--- a/packages/@sanity/imagetool/package.json
+++ b/packages/@sanity/imagetool/package.json
@@ -14,9 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "debug": "^3.2.7",
-    "lodash": "^4.17.15",
-    "@sanity/ui": "^0.37.1",
-    "@sanity/icons": "^1.2.1"
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
     "@sanity/state-router": "2.22.3",
