chore: remove --force flag when running tsc/type check
The compile cache seems a lot more stable these days, so running tsc -b with the --force flag should only be needed in rare cases. To force rebuild you should now instead pass the --force flag as a subarg, e.g. `npm run type-check -- --force`

--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "verify-format": "lerna run clean && npm run prettier -- -c",
     "postinstall": "node ./scripts/validateMonorepoDependencies.js && npm run bootstrap",
     "vercel-build": "npm run build:js && cd dev/test-studio && npm run build -- -y",
-    "type-check": "tsc -b --force",
+    "type-check": "tsc -b",
     "cypress:open": "cypress open --config-file cypress/cypress.json",
     "cypress:run": "cypress run --config-file cypress/cypress.json"
   },
