--- a/packages/@sanity/default-layout/package.json
+++ b/packages/@sanity/default-layout/package.json
@@ -32,7 +32,7 @@
   "dependencies": {
     "@reach/auto-id": "^0.13.2",
     "@sanity/base": "2.25.4",
-    "@sanity/client": "2.23.2",
+    "@sanity/client": "^3.0.1",
     "@sanity/generate-help-url": "2.18.0",
     "@sanity/icons": "^1.2.1",
     "@sanity/ui": "^0.37.2",
