--- a/packages/@sanity/desk-tool/package.json
+++ b/packages/@sanity/desk-tool/package.json
@@ -30,7 +30,7 @@
   ],
   "dependencies": {
     "@reach/auto-id": "^0.13.2",
-    "@sanity/client": "2.23.2",
+    "@sanity/client": "^3.0.1",
     "@sanity/data-aspects": "2.18.0",
     "@sanity/diff": "2.20.0",
     "@sanity/field": "2.25.4",
