--- a/packages/@sanity/import-cli/package.json
+++ b/packages/@sanity/import-cli/package.json
@@ -25,7 +25,7 @@
     "ndjson"
   ],
   "dependencies": {
-    "@sanity/client": "2.23.2",
+    "@sanity/client": "^3.0.1",
     "@sanity/import": "2.23.2",
     "get-it": "^5.2.1",
     "meow": "^9.0.0",
