--- a/packages/@sanity/import/package.json
+++ b/packages/@sanity/import/package.json
@@ -47,7 +47,7 @@
     "whatwg-url": "^7.0.0"
   },
   "devDependencies": {
-    "@sanity/client": "2.23.2",
+    "@sanity/client": "^3.0.1",
     "nock": "^9.0.5",
     "rimraf": "^2.7.1"
   },
