--- a/packages/@sanity/types/package.json
+++ b/packages/@sanity/types/package.json
@@ -20,7 +20,7 @@
     "typescript"
   ],
   "dependencies": {
-    "@sanity/client": "2.23.2",
+    "@sanity/client": "^3.0.1",
     "@sanity/color": "^2.1.5",
     "@types/react": "^17.0.0",
     "react": "17.0.1",
