--- a/packages/@sanity/default-layout/package.json
+++ b/packages/@sanity/default-layout/package.json
@@ -35,6 +35,7 @@
     "@sanity/client": "^3.0.1",
     "@sanity/generate-help-url": "2.18.0",
     "@sanity/icons": "^1.2.1",
+    "@sanity/logos": "^1.1.6",
     "@sanity/ui": "^0.37.2",
     "@sanity/util": "2.24.0",
     "lodash": "^4.17.15",
@@ -42,6 +43,7 @@
     "rxjs": "^6.5.3"
   },
   "devDependencies": {
+    "@sanity/ui-workshop": "^0.3.12",
     "@sanity/types": "2.24.0",
     "mocha": "^5.0.1",
     "nyc": "^11.0.3",
