--- a/packages/@sanity/base/package.json
+++ b/packages/@sanity/base/package.json
@@ -41,13 +41,13 @@
   },
   "homepage": "https://www.sanity.io/",
   "dependencies": {
-    "@juggle/resize-observer": "^3.3.0",
+    "@juggle/resize-observer": "^3.3.1",
     "@popperjs/core": "^2.5.4",
     "@reach/auto-id": "^0.13.2",
     "@sanity/bifur-client": "^0.0.8",
     "@sanity/client": "^3.0.1",
     "@sanity/color": "^2.1.5",
-    "@sanity/generate-help-url": "2.18.0",
+    "@sanity/generate-help-url": "^3.0.0",
     "@sanity/icons": "^1.2.1",
     "@sanity/image-url": "^1.0.1",
     "@sanity/initial-value-templates": "2.26.0",
