--- a/packages/@sanity/form-builder/package.json
+++ b/packages/@sanity/form-builder/package.json
@@ -32,7 +32,7 @@
     "@sanity/block-tools": "2.24.0",
     "@sanity/client": "^3.0.1",
     "@sanity/color": "^2.1.5",
-    "@sanity/generate-help-url": "2.18.0",
+    "@sanity/generate-help-url": "^3.0.0",
     "@sanity/icons": "^1.2.1",
     "@sanity/image-url": "^1.0.1",
     "@sanity/imagetool": "2.23.3",
