--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "stylelint": "stylelint \"**/*.css\"",
     "stylelint:fix": "stylelint \"**/*.css\" --fix",
     "build-and-serve": "cd dev/test-studio && npm run build && history-server -p 3333 -a dist",
-    "test": "jest && lerna run --scope groq --scope '@sanity/{client,generate-help-url,plugin-loader}' test",
+    "test": "jest && lerna run --scope groq --scope '@sanity/{plugin-loader}' test",
     "test-e2e": "start-server-and-test build-and-serve http://localhost:3333 'npm run cypress:run'",
     "test-perf": "start-server-and-test perf-studio http://localhost:3344 'ts-node -r dotenv/config perf/suite'",
     "updated": "lerna updated",
