--- a/packages/@sanity/data-aspects/package.json
+++ b/packages/@sanity/data-aspects/package.json
@@ -18,7 +18,7 @@
     "sanity-plugin"
   ],
   "dependencies": {
-    "@sanity/generate-help-url": "2.18.0",
+    "@sanity/generate-help-url": "^3.0.0",
     "lodash": "^4.17.15"
   },
   "devDependencies": {
