--- a/packages/@sanity/default-layout/package.json
+++ b/packages/@sanity/default-layout/package.json
@@ -33,7 +33,7 @@
     "@reach/auto-id": "^0.13.2",
     "@sanity/base": "2.26.0",
     "@sanity/client": "^3.0.1",
-    "@sanity/generate-help-url": "2.18.0",
+    "@sanity/generate-help-url": "^3.0.0",
     "@sanity/icons": "^1.2.1",
     "@sanity/logos": "^1.1.6",
     "@sanity/ui": "^0.37.2",
