--- a/packages/@sanity/import/package.json
+++ b/packages/@sanity/import/package.json
@@ -26,7 +26,7 @@
   ],
   "dependencies": {
     "@sanity/asset-utils": "^1.2.0",
-    "@sanity/generate-help-url": "2.18.0",
+    "@sanity/generate-help-url": "^3.0.0",
     "@sanity/mutator": "2.21.0",
     "@sanity/uuid": "^3.0.1",
     "debug": "^3.2.7",
