--- a/packages/@sanity/schema/package.json
+++ b/packages/@sanity/schema/package.json
@@ -30,7 +30,7 @@
   "author": "Sanity.io <hello@sanity.io>",
   "license": "MIT",
   "dependencies": {
-    "@sanity/generate-help-url": "2.18.0",
+    "@sanity/generate-help-url": "^3.0.0",
     "arrify": "^1.0.1",
     "humanize-list": "^1.0.1",
     "leven": "^3.1.0",
