--- a/packages/@sanity/desk-tool/package.json
+++ b/packages/@sanity/desk-tool/package.json
@@ -50,6 +50,7 @@
     "lodash": "^4.17.15",
     "mendoza": "^2.1.1",
     "nanoid": "^3.1.30",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-is": "^17.0.2",
     "react-json-inspector": "^7.1.1",
     "react-rx": "^1.0.0-beta.6",
@@ -62,6 +63,7 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.5",
     "@types/is-hotkey": "^0.1.3",
+    "@types/react-copy-to-clipboard": "^5.0.2",
     "@types/shallow-equals": "^1.0.0",
     "@types/webpack-env": "^1.16.2",
     "react": "17.0.1",
