--- a/packages/@sanity/form-builder/package.json
+++ b/packages/@sanity/form-builder/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sanity/form-builder",
-  "version": "2.25.4",
+  "version": "2.26.0",
   "description": "Sanity form builder",
   "main": "lib/_exports/index.js",
   "types": "index.d.ts",
@@ -28,20 +28,21 @@
   "license": "MIT",
   "dependencies": {
     "@reach/auto-id": "^0.13.2",
-    "@sanity/base": "2.25.4",
+    "@sanity/base": "2.26.0",
     "@sanity/block-tools": "2.24.0",
     "@sanity/client": "^3.0.1",
     "@sanity/color": "^2.1.5",
     "@sanity/generate-help-url": "2.18.0",
     "@sanity/icons": "^1.2.1",
+    "@sanity/image-url": "^1.0.1",
     "@sanity/imagetool": "2.23.3",
-    "@sanity/initial-value-templates": "2.24.0",
+    "@sanity/initial-value-templates": "2.26.0",
     "@sanity/mutator": "2.21.0",
-    "@sanity/portable-text-editor": "2.25.3",
+    "@sanity/portable-text-editor": "2.26.0",
     "@sanity/schema": "2.24.0",
-    "@sanity/types": "2.24.0",
+    "@sanity/types": "2.26.0",
     "@sanity/ui": "^0.37.2",
-    "@sanity/util": "2.24.0",
+    "@sanity/util": "2.26.0",
     "@sanity/uuid": "^3.0.1",
     "attr-accept": "^1.1.0",
     "date-fns": "^2.16.1",
@@ -60,8 +61,7 @@
     "rxjs": "^6.5.3",
     "scroll-into-view-if-needed": "^2.2.26",
     "shallow-equals": "^1.0.0",
-    "speakingurl": "^13.0.0",
-    "@sanity/image-url": "^1.0.1"
+    "speakingurl": "^13.0.0"
   },
   "devDependencies": {
     "@sanity/state-router": "2.22.3",
