--- a/package.json
+++ b/package.json
@@ -1,56 +1,64 @@
 {
-  "name": "sanity",
   "private": true,
   "isSanityMonorepo": true,
+  "name": "sanity",
+  "workspaces": [
+    "dev/*",
+    "examples/*",
+    "packages/@sanity/*",
+    "packages/create-sanity",
+    "packages/groq",
+    "packages/sanity"
+  ],
   "scripts": {
-    "workshop": "cd dev/workshop && npm run dev",
-    "bootstrap": "lerna bootstrap && npm run build:cli && npm run package",
-    "dev": "npm start",
+    "workshop": "cd dev/workshop && yarn dev",
+    "bootstrap": "lerna bootstrap && run-s build:cli package",
+    "dev": "yarn start",
     "rebuild": "gulp build",
-    "build": "gulp clean && gulp build && npm run package",
+    "build": "lerna run --scope @sanity/* build",
     "build:cli": "gulp build:cli",
     "build:js": "gulp js",
+    "check:versions": "node scripts/normalizeDependencyVersions.js",
     "clean": "lerna clean && gulp clean && rimraf node_modules",
-    "publish": "npm run build && lerna publish --exact",
-    "publish-canary": "RELEASE_TAG=canary npm run publish-tag",
-    "publish-current-branch": "RELEASE_TAG=`git rev-parse --abbrev-ref HEAD | sed 's/\\//\\_/g'` npm run publish-tag",
-    "publish-tag": "RELEASE_TAG=\"${RELEASE_TAG:-canary}\"; npm run build && lerna publish --canary --force-publish --no-git-tag-version --dist-tag=$RELEASE_TAG --preid=$RELEASE_TAG --exact",
-    "package": "npm run package-yarn && npm run package-cli",
-    "package-cli": "(cd packages/@sanity/cli && npm run pack)",
-    "package-yarn": "(cd packages/@sanity/cli && npm run package-yarn)",
-    "init": "lerna clean --yes && npm run bootstrap && npm run build",
-    "deploy-test": "npm run build && cd dev/test-studio && sanity deploy",
-    "deploy-movies": "npm run build && cd examples/movies-studio && sanity deploy",
-    "lint": "npm run eslint -- .",
+    "publish": "yarn build && lerna publish --exact",
+    "publish-canary": "RELEASE_TAG=canary yarn publish-tag",
+    "publish-current-branch": "RELEASE_TAG=`git rev-parse --abbrev-ref HEAD | sed 's/\\//\\_/g'` yarn publish-tag",
+    "publish-tag": "RELEASE_TAG=\"${RELEASE_TAG:-canary}\"; yarn build && lerna publish --canary --force-publish --no-git-tag-version --dist-tag=$RELEASE_TAG --preid=$RELEASE_TAG --exact",
+    "package": "run-s package-yarn package-cli",
+    "package-cli": "yarn --cwd packages/@sanity/cli pack",
+    "package-yarn": "yarn --cwd packages/@sanity/cli package-yarn",
+    "init": "lerna clean --yes && run-s bootstrap build",
+    "deploy-test": "yarn build && cd dev/test-studio && sanity deploy",
+    "deploy-movies": "yarn build && cd examples/movies-studio && sanity deploy",
+    "lint": "yarn eslint .",
     "depcheck": "lerna exec \\$LERNA_ROOT_PATH/scripts/depcheck.js --no-bail --parallel",
     "eslint": "eslint --ext=.js,.jsx,.mjs,.ts,.tsx --quiet",
     "lint:fix": "eslint . --quiet --fix",
-    "start": "npm run test-studio",
-    "ecommerce-studio": "cd examples/ecommerce-studio && npm start",
-    "test-studio": "cd dev/test-studio && npm start",
-    "clean-studio": "cd examples/clean-studio && npm start",
-    "design-studio": "cd dev/design-studio && npm start",
-    "perf-studio": "cd dev/perf-studio && npm start",
-    "example-studio": "cd dev/example-studio && npm start",
-    "movies-studio": "cd examples/movies-studio && npm start",
-    "blog-studio": "cd examples/blog-studio && npm start",
+    "start": "yarn test-studio",
+    "ecommerce-studio": "cd examples/ecommerce-studio && yarn start",
+    "test-studio": "cd dev/test-studio && yarn start",
+    "clean-studio": "cd examples/clean-studio && yarn start",
+    "design-studio": "cd dev/design-studio && yarn start",
+    "perf-studio": "cd dev/perf-studio && yarn start",
+    "example-studio": "cd dev/example-studio && yarn start",
+    "movies-studio": "cd examples/movies-studio && yarn start",
+    "blog-studio": "cd examples/blog-studio && yarn start",
     "stylelint": "stylelint \"**/*.css\"",
     "stylelint:fix": "stylelint \"**/*.css\" --fix",
-    "build-and-serve": "cd dev/test-studio && npm run build && history-server -p 3333 -a dist",
+    "build-and-serve": "(cd dev/test-studio && yarn build && history-server -p 3333 -a dist)",
     "test": "jest && lerna run --scope groq --scope '@sanity/{plugin-loader}' test",
-    "test-e2e": "start-server-and-test build-and-serve http://localhost:3333 'npm run cypress:run'",
+    "test-e2e": "start-server-and-test build-and-serve http://localhost:3333 'yarn cypress:run'",
     "test-perf": "start-server-and-test perf-studio http://localhost:3344 'ts-node -r dotenv/config perf/suite'",
     "updated": "lerna updated",
     "watch": "gulp watch",
     "release-notes": "node scripts/printReleaseNotesTemplate.js",
-    "versions": "node scripts/normalizeDependencyVersions.js",
     "normalize-pkgfields": "node scripts/normalizePackageFields.js",
-    "prettify": "lerna run clean && npm run prettier -- --write",
+    "prettify": "lerna run clean && yarn prettier --write",
     "prettier": "prettier '**/*.{ts,js,tsx,jsx}'",
-    "lint-next": "npm run eslint -- `git diff --name-only next --diff-filter ACMRTUXB`",
-    "verify-format": "lerna run clean && npm run prettier -- -c",
-    "postinstall": "node ./scripts/validateMonorepoDependencies.js && npm run bootstrap",
-    "vercel-build": "npm run build:js && cd dev/test-studio && npm run build -- -y",
+    "lint-next": "yarn eslint `git diff --name-only next --diff-filter ACMRTUXB`",
+    "verify-format": "lerna run clean && yarn prettier -c",
+    "postinstall": "node ./scripts/validateMonorepoDependencies.js && yarn bootstrap",
+    "vercel-build": "yarn build:js && (cd dev/test-studio && yarn build -y)",
     "type-check": "tsc -b",
     "cypress:open": "cypress open --config-file cypress/cypress.json",
     "cypress:run": "cypress run --config-file cypress/cypress.json"
@@ -119,6 +127,7 @@
     "lodash": "^4.17.15",
     "merge-stream": "^2.0.0",
     "minimist": "^1.2.0",
+    "npm-run-all": "^4.1.5",
     "pre-commit": "^1.2.2",
     "prettier": "2.1.2",
     "puppeteer": "^11.0.0",
