test: configure playwright for e2e testing

--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
     "@babel/register": "^7.7.4",
     "@babel/runtime": "7.12.13",
     "@sanity/client": "^3.0.1",
+    "@cypress/code-coverage": "^3.9.12",
+    "@playwright/test": "^1.18.1",
     "@types/jest": "^27.0.1",
     "@types/node": "^14.18.9",
     "@types/react": "^17.0.0",
@@ -119,6 +121,7 @@
     "lodash": "^4.17.15",
     "merge-stream": "^2.0.0",
     "minimist": "^1.2.0",
+    "playwright": "^1.18.1",
     "pre-commit": "^1.2.2",
     "prettier": "2.1.2",
     "puppeteer": "^11.0.0",
