--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,9 @@ PERF_TEST_SANITY_SESSION_TOKEN=
 # Open devtools, go to network tab, click on a request to the sanity api, go to the cookies tab and copy the value of
 # the `sanitySession` request cookie.
 CYPRESS_SANITY_SESSION_TOKEN=
+
+# This is a personal session token that allows puppeteer to interact with the studio as an authenticated user
+# You can find your personal sanity token by opening devtools (while running the dev env) and inspecting cookies on any request to the sanity api
+# Open devtools, go to network tab, click on a request to the sanity api, go to the cookies tab and copy the value of
+# the `sanitySession` request cookie.
+PLAYWRIGHT_SANITY_SESSION_TOKEN=
