WIP: support "sources" in `(root)`

--- a/package.json
+++ b/package.json
@@ -33,8 +33,11 @@
     "dev:ecommerce-studio": "yarn --cwd examples/ecommerce-studio start",
     "dev:example-studio": "yarn --cwd dev/example-studio start",
     "dev:movies-studio": "yarn --cwd examples/movies-studio start",
+    "dev:multi-source-studio": "yarn --cwd dev/multi-source-studio dev",
     "dev:partless-studio": "yarn --cwd dev/partless-studio dev",
     "dev:perf-studio": "yarn --cwd dev/perf-studio start",
+    "dev:workspaces": "yarn --cwd dev/workspaces dev",
+    "dev:starter-studio": "yarn --cwd dev/starter-studio start",
     "dev:test-studio": "yarn --cwd dev/test-studio start",
     "dev:workshop": "yarn --cwd dev/workshop dev",
     "eslint": "eslint --ext=.js,.jsx,.mjs,.ts,.tsx --quiet",
