--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "boxen": "^4.1.0",
+    "common-tags": "^1.8.0",
     "chalk": "^2.4.2",
     "cypress": "^6.3.0",
     "cypress-dotenv": "^1.2.2",
@@ -119,6 +120,7 @@
     "lodash": "^4.17.15",
     "merge-stream": "^2.0.0",
     "minimist": "^1.2.0",
+    "node-fetch": "^2.6.1",
     "pre-commit": "^1.2.2",
     "prettier": "2.1.2",
     "puppeteer": "^11.0.0",
