--- a/packages/@sanity/default-layout/package.json
+++ b/packages/@sanity/default-layout/package.json
@@ -30,19 +30,22 @@
   },
   "homepage": "https://www.sanity.io/",
   "dependencies": {
-    "@reach/auto-id": "^0.13.2",
+    "@sanity/asset-utils": "^1.2.0",
     "@sanity/base": "2.28.2",
     "@sanity/client": "^3.2.0",
     "@sanity/generate-help-url": "^3.0.0",
     "@sanity/icons": "^1.2.1",
+    "@sanity/image-url": "^1.0.1",
     "@sanity/logos": "^1.1.6",
     "@sanity/ui": "^0.37.2",
     "@sanity/util": "2.28.0",
+    "@portabletext/react": "^1.0.0",
     "lodash": "^4.17.15",
     "react-rx": "^1.0.0-beta.6",
     "rxjs": "^6.5.3"
   },
   "devDependencies": {
+    "@sanity/base": "2.28.2",
     "@sanity/types": "2.28.0",
     "@sanity/ui-workshop": "^0.3.12",
     "mocha": "^5.0.1",
