--- a/packages/@sanity/default-login/package.json
+++ b/packages/@sanity/default-login/package.json
@@ -20,6 +20,7 @@
   ],
   "dependencies": {
     "@sanity/base": "2.27.0",
+    "@sanity/client": "^3.0.6",
     "@sanity/generate-help-url": "^3.0.0",
     "@sanity/logos": "^1.1.6",
     "@sanity/ui": "^0.37.2",
