--- a/packages/@sanity/base/package.json
+++ b/packages/@sanity/base/package.json
@@ -65,6 +65,7 @@
     "classnames": "^2.2.5",
     "dataloader": "^2.0.0",
     "date-fns": "^2.16.1",
+    "debug": "^3.2.7",
     "dom-scroll-into-view": "^1.2.1",
     "element-resize-detector": "^1.1.14",
     "groq-js": "^0.2.0",
