--- a/package.json
+++ b/package.json
@@ -128,7 +128,7 @@
     "stylelint": "^13.4.1",
     "stylelint-config-prettier": "^8.0.1",
     "stylelint-prettier": "^1.1.2",
-    "typescript": "^4.4.2"
+    "typescript": "4.5.5"
   },
   "optionalDependencies": {
     "node-notifier": "^10.0.0"
