--- a/packages/@sanity/cli/package.json
+++ b/packages/@sanity/cli/package.json
@@ -52,6 +52,7 @@
     "@types/configstore": "^5.0.1",
     "@types/decompress": "^4.2.4",
     "@types/eventsource": "^1.1.8",
+    "@types/inquirer": "^6.0.0",
     "@types/node": "^14.18.9",
     "@types/split2": "^3.2.1",
     "@types/validate-npm-package-name": "^3.0.3",
@@ -64,7 +65,6 @@
     "decompress": "^4.2.0",
     "deep-sort-object": "^1.0.1",
     "dotenv": "^10.0.0",
-    "es6-promisify": "^6.0.0",
     "eventsource": "^1.0.6",
     "execa": "^2.0.0",
     "fs-extra": "^7.0.0",
