chore(base): update dependencies

--- a/packages/@sanity/base/package.json
+++ b/packages/@sanity/base/package.json
@@ -44,6 +44,7 @@
     "@juggle/resize-observer": "^3.3.1",
     "@popperjs/core": "^2.5.4",
     "@reach/auto-id": "^0.13.2",
+    "@sanity/asset-utils": "^1.2.0",
     "@sanity/bifur-client": "^0.0.8",
     "@sanity/client": "^3.2.0",
     "@sanity/color": "^2.1.5",
@@ -106,6 +107,7 @@
     "@types/element-resize-detector": "1.1.2",
     "@types/raf": "^3.4.0",
     "@types/refractor": "^3.0.0",
+    "@portabletext/types":"1.0.3",
     "prop-types": "^15.6.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
