--- a/packages/@sanity/server/package.json
+++ b/packages/@sanity/server/package.json
@@ -2,7 +2,8 @@
   "name": "@sanity/server",
   "version": "2.29.5",
   "description": "Webserver dedicated to serving Sanity, allowing a smooth development experience",
-  "main": "lib/server.js",
+  "main": "lib/index.js",
+  "types": "dist/dts/index.d.ts",
   "scripts": {
     "build": "../../../bin/pkg-utils transpile --target node",
     "clean": "rimraf lib dest",
@@ -33,39 +34,12 @@
   },
   "homepage": "https://www.sanity.io/",
   "dependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
-    "@babel/preset-typescript": "^7.10.4",
-    "@babel/register": "^7.7.4",
-    "@hot-loader/react-dom": "^16.9.0-4.12.11",
-    "@sanity/css-loader": "^0.28.12",
-    "@sanity/eventsource": "^3.0.1",
-    "@sanity/resolver": "2.29.5",
-    "@sanity/ui": "^0.37.2",
     "@sanity/util": "2.29.5",
-    "@sanity/webpack-dev-middleware": "^2.0.6",
-    "@sanity/webpack-integration": "2.29.5",
-    "babel-loader": "^8.0.6",
-    "eventsource-polyfill": "^0.9.6",
-    "express": "^4.16.1",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^1.1.4",
-    "find-config": "^1.0.0",
-    "lodash": "^4.17.15",
-    "postcss-loader": "^2.0.6",
-    "react-hot-loader": "^4.12.11",
+    "@vitejs/plugin-react": "^1.0.9",
+    "express": "^4.17.1",
     "read-pkg-up": "^7.0.1",
-    "require-uncached": "^1.0.3",
-    "resolve": "^1.3.3",
-    "resolve-from": "^4.0.0",
-    "rxjs": "^6.5.3",
-    "strip-ansi": "^6.0.1",
-    "style-loader": "^0.20.1",
-    "symbol-observable": "^1.2.0",
-    "webpack": "^3.8.1",
-    "webpack-hot-middleware": "2.25.1"
+    "resolve-from": "^5.0.0",
+    "vite": "^2.6.14"
   },
   "devDependencies": {
     "@sanity/base": "2.29.1",
@@ -75,7 +49,8 @@
     "rimraf": "^3.0.2"
   },
   "peerDependencies": {
-    "react": "^16.9 || ^17",
-    "react-dom": "^16.9 || ^17"
+    "@sanity/base": "2.22.0",
+    "react": "^17",
+    "react-dom": "^17"
   }
 }
