--- a/packages/@sanity/server/tsconfig.json
+++ b/packages/@sanity/server/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "../../../tsconfig.settings",
-  "include": ["src"],
+  "include": ["./src/"],
   "compilerOptions": {
     "composite": true,
     "jsx": "react",
