WIP: build(default-layout): build using `pkg-utils`

--- a/packages/@sanity/default-layout/.gitignore
+++ b/packages/@sanity/default-layout/.gitignore
@@ -1,16 +1,12 @@
 # Logs
+/logs
 *.log
 
-# idea
-.idea
-
-# Compiled files
-lib
-
 # Coverage directory used by tools like istanbul
-coverage
-.nyc_output
+/coverage
 
 # Dependency directories
-node_modules
-dist
+/node_modules
+
+# Compiled code
+/lib
