--- a/packages/@sanity/default-layout/package.json
+++ b/packages/@sanity/default-layout/package.json
@@ -2,12 +2,16 @@
   "name": "@sanity/default-layout",
   "version": "2.30.0",
   "description": "The default layout components for Sanity",
-  "main": "./lib/default-layout.js",
-  "types": "./dist/dts",
+  "main": "./lib/cjs/Root.js",
+  "module": "./lib/esm/Root.js",
+  "types": "./lib/dts/src/Root.d.ts",
   "scripts": {
+    "build": "../../../bin/pkg-utils transpile",
     "coverage": "nyc --report=lcov --report=text _mocha -- test/**/*.test.js",
-    "clean": "rimraf lib .nyc_output coverage",
-    "posttest": "npm run type-check"
+    "clean": "rimraf .nyc_output coverage lib",
+    "posttest": "yarn type-check",
+    "prebuild": "yarn clean",
+    "watch": "../../../bin/pkg-utils transpile --watch"
   },
   "repository": {
     "type": "git",
@@ -30,9 +34,8 @@
   },
   "homepage": "https://www.sanity.io/",
   "dependencies": {
-    "@portabletext/react": "^1.0.0",
-    "@reach/auto-id": "^0.13.2",
-    "@sanity/asset-utils": "^1.2.0",
+    "@portabletext/react": "^1.0.4",
+    "@sanity/asset-utils": "^1.2.3",
     "@sanity/base": "2.30.0",
     "@sanity/client": "^3.2.0",
     "@sanity/generate-help-url": "^3.0.0",
@@ -41,7 +44,7 @@
     "@sanity/logos": "^1.1.9",
     "@sanity/ui": "^0.37.9",
     "@sanity/util": "2.29.5",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.21",
     "react-rx": "^1.0.0-beta.6",
     "rxjs": "^6.5.3"
   },
@@ -51,7 +54,7 @@
     "mocha": "^5.0.1",
     "nyc": "^11.0.3",
     "prop-types": "^15.6.0",
-    "rimraf": "^2.7.1"
+    "rimraf": "^3.0.2"
   },
   "peerDependencies": {
     "prop-types": "^15.6 || ^16",
