WIP: build(desk-tool): build using `pkg-utils`

--- a/packages/@sanity/desk-tool/.gitignore
+++ b/packages/@sanity/desk-tool/.gitignore
@@ -5,12 +5,8 @@
 # Coverage directory used by tools like istanbul
 /coverage
 
-# Grunt intermediate storage
-.grunt
-
 # Dependency directories
 /node_modules
 
-# Compiled version
+# Compiled code
 /lib
-/dist
