--- a/packages/@sanity/desk-tool/package.json
+++ b/packages/@sanity/desk-tool/package.json
@@ -2,21 +2,65 @@
   "name": "@sanity/desk-tool",
   "version": "2.30.0",
   "description": "Tool for managing all sorts of content in a structured manner",
-  "main": "./lib/_exports/index.js",
-  "types": "index.d.ts",
-  "typesVersions": {
-    "*": {
-      "*": [
-        "./dist/dts/_exports/*"
-      ]
+  "main": "lib/_exports/index.cjs",
+  "module": "lib/_exports/index.js",
+  "exports": {
+    ".": {
+      "source": "./src/_exports/index.ts",
+      "require": "./lib/_exports/index.cjs",
+      "default": "./lib/_exports/index.js"
+    },
+    "./components": {
+      "source": "./src/_exports/components.ts",
+      "require": "./lib/_exports/components.cjs",
+      "default": "./lib/_exports/components.js"
+    },
+    "./structure-builder": {
+      "source": "./src/_exports/structure-builder.ts",
+      "require": "./lib/_exports/structure-builder.cjs",
+      "default": "./lib/_exports/structure-builder.js"
+    },
+    "./_parts/base-diff-resolver": {
+      "source": "./src/_parts/base-diff-resolver.ts",
+      "require": "./lib/_parts/base-diff-resolver.cjs",
+      "default": "./lib/_parts/base-diff-resolver.js"
+    },
+    "./_parts/base-document-actions-resolver": {
+      "source": "./src/_parts/base-document-actions-resolver.ts",
+      "require": "./lib/_parts/base-document-actions-resolver.cjs",
+      "default": "./lib/_parts/base-document-actions-resolver.js"
+    },
+    "./_parts/base-document-actions": {
+      "source": "./src/_parts/base-document-actions.ts",
+      "require": "./lib/_parts/base-document-actions.cjs",
+      "default": "./lib/_parts/base-document-actions.js"
+    },
+    "./_parts/base-document-badges-resolver": {
+      "source": "./src/_parts/base-document-badges-resolver.ts",
+      "require": "./lib/_parts/base-document-badges-resolver.cjs",
+      "default": "./lib/_parts/base-document-badges-resolver.js"
+    },
+    "./_parts/base-document-badges": {
+      "source": "./src/_parts/base-document-badges.ts",
+      "require": "./lib/_parts/base-document-badges.cjs",
+      "default": "./lib/_parts/base-document-badges.js"
+    },
+    "./_parts/base-tool": {
+      "source": "./src/_parts/base-tool.tsx",
+      "require": "./lib/_parts/base-tool.cjs",
+      "default": "./lib/_parts/base-tool.js"
     }
   },
+  "types": "lib/dts/_exports/index.d.ts",
   "author": "Sanity.io <hello@sanity.io>",
   "license": "MIT",
   "scripts": {
-    "clean": "rimraf lib dest",
+    "build": "../../../bin/pkg-utils bundle",
+    "clean": "rimraf lib",
     "lint": "eslint . --ext .js,.jsx,.mjs,.ts,.tsx --quiet",
-    "test": "jest"
+    "prebuild": "yarn clean",
+    "test": "jest",
+    "watch": "../../../bin/pkg-utils bundle --watch"
   },
   "keywords": [
     "sanity",
@@ -33,11 +77,11 @@
     "@sanity/client": "^3.2.0",
     "@sanity/data-aspects": "2.29.3",
     "@sanity/diff": "2.29.3",
-    "@sanity/field": "2.30.0",
     "@sanity/form-builder": "2.30.0",
     "@sanity/generate-help-url": "^3.0.0",
     "@sanity/icons": "^1.2.6",
     "@sanity/react-hooks": "2.30.0",
+    "@sanity/schema": "2.29.3",
     "@sanity/structure": "2.29.5",
     "@sanity/types": "2.29.5",
     "@sanity/ui": "^0.37.9",
@@ -47,7 +91,7 @@
     "hashlru": "^2.1.0",
     "is-hotkey": "^0.1.6",
     "leven": "^3.1.0",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.21",
     "mendoza": "^2.1.1",
     "nanoid": "^3.1.30",
     "react-copy-to-clipboard": "^5.0.4",
@@ -58,17 +102,16 @@
     "shallow-equals": "^1.0.0"
   },
   "devDependencies": {
-    "@sanity/base": "2.30.0",
-    "@sanity/schema": "2.29.3",
     "@sanity/ui-workshop": "^0.4.1",
-    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^11.2.5",
     "@types/is-hotkey": "^0.1.3",
     "@types/react-copy-to-clipboard": "^5.0.2",
     "@types/shallow-equals": "^1.0.0",
     "@types/webpack-env": "^1.16.2",
     "react": "17.0.1",
-    "rimraf": "^2.7.1"
+    "rimraf": "^3.0.2",
+    "styled-components": "^5.2.0"
   },
   "peerDependencies": {
     "@sanity/base": "^2.0",
