--- a/packages/@sanity/diff/tsconfig.json
+++ b/packages/@sanity/diff/tsconfig.json
@@ -1,12 +1,13 @@
 {
-  "extends": "../../../tsconfig",
-  "include": ["src"],
+  "extends": "../../../tsconfig.settings",
+  "include": ["./src/"],
   "compilerOptions": {
     "composite": true,
     // todo: we need to disable noImplicitAny in a transition phase and should be removed eventually
     "noImplicitAny": false,
-    "rootDir": "./src",
-    "outDir": "./dist/dts",
+    "declarationDir": "./lib/dts/",
+    "rootDir": "./",
+    "outDir": "./lib/dts/",
     "jsx": "react"
   }
 }
