--- a/packages/@sanity/form-builder/tsconfig.lib.json
+++ b/packages/@sanity/form-builder/tsconfig.lib.json
@@ -1,11 +1,18 @@
 {
   "extends": "../../../tsconfig.settings",
   "include": ["./src/"],
+  "exclude": [
+    "./src/**/__fixtures__/*",
+    "./src/**/__mocks__/*",
+    "./src/**/__workshop__/*",
+    "./src/**/*.test.ts",
+    "./src/**/*.test.tsx"
+  ],
   "compilerOptions": {
     "composite": true,
-    "declarationDir": "./lib/dev/",
+    "declarationDir": "./lib/dts/",
     "rootDir": "./",
-    "outDir": "./lib/dev/",
+    "outDir": "./lib/dts/",
     // todo: we need to disable strict in a transition phase and should be removed eventually
     "noImplicitAny": false,
     "strictNullChecks": false,
