--- a/packages/@sanity/google-maps-input/.gitignore
+++ b/packages/@sanity/google-maps-input/.gitignore
@@ -1,17 +1,12 @@
 # Logs
-logs
+/logs
 *.log
 
 # Coverage directory used by tools like istanbul
-coverage
-
-# Grunt intermediate storage
-.grunt
+/coverage
 
 # Dependency directories
-node_modules
+/node_modules
 
 # Compiled code
-lib
-
-dist
+/lib
