--- a/packages/@sanity/imagetool/package.json
+++ b/packages/@sanity/imagetool/package.json
@@ -2,37 +2,67 @@
   "name": "@sanity/imagetool",
   "version": "2.29.8",
   "description": "The image hotspot selector / cropper used in Sanity",
-  "main": "./index.js",
-  "types": "./dist/dts",
+  "source": "./src/_exports/index.ts",
+  "main": "./lib/cjs/_exports/index.js",
+  "module": "./lib/esm/_exports/index.js",
+  "exports": {
+    ".": {
+      "source": "./src/_exports/index.ts",
+      "require": "./lib/cjs/_exports/index.js",
+      "default": "./lib/esm/_exports/index.js"
+    },
+    "./calculateStyles": {
+      "source": "./src/_exports/calculateStyles.ts",
+      "require": "./lib/cjs/_exports/calculateStyles.js",
+      "default": "./lib/esm/_exports/calculateStyles.js"
+    },
+    "./constants": {
+      "source": "./src/_exports/constants.ts",
+      "require": "./lib/cjs/_exports/constants.js",
+      "default": "./lib/esm/_exports/constants.js"
+    },
+    "./HotspotImage": {
+      "source": "./src/_exports/HotspotImage.ts",
+      "require": "./lib/cjs/_exports/HotspotImage.js",
+      "default": "./lib/esm/_exports/HotspotImage.js"
+    }
+  },
+  "types": "./lib/dts/src/_exports/index.d.ts",
+  "//": "the typesVersion config below is a workaround for TypeScript's lack of support for package exports",
+  "typesVersions": {
+    "*": {
+      "calculateStyles": [
+        "./lib/dts/src/_exports/calculateStyles.d.ts"
+      ],
+      "constants": [
+        "./lib/dts/src/_exports/constants.d.ts"
+      ],
+      "HotspotImage": [
+        "./lib/dts/src/_exports/HotspotImage.d.ts"
+      ]
+    }
+  },
   "scripts": {
-    "clean": "rimraf lib dest",
-    "bloat": "browserify -t babelify --full-paths ./src/index.js | discify --open",
+    "build": "../../../bin/pkg-utils transpile",
+    "clean": "rimraf lib",
+    "exports-check": "../../../bin/pkg-utils exports-check",
+    "prebuild": "yarn clean",
     "start": "remon --require babel-core/register ./example/app.js",
-    "test": "jest"
+    "test": "jest",
+    "watch": "../../../bin/pkg-utils transpile --watch"
   },
   "author": "Sanity.io <hello@sanity.io>",
   "license": "MIT",
   "dependencies": {
     "debug": "^3.2.7",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@sanity/state-router": "2.29.3",
-    "babelify": "^10.0.0",
-    "browserify": "^14.3.0",
-    "disc": "^1.3.2",
-    "envify": "^4.0.0",
-    "error-capture-middleware": "0.0.2",
-    "express": "^4.16.1",
-    "history": "^4.6.3",
     "prop-types": "^15.6.0",
-    "quickreload": "^2.1.2",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "rebundler": "^0.3.0",
-    "remon": "^1.0.2",
-    "rimraf": "^2.7.1",
-    "staticr": "^4.0.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "rimraf": "^3.0.2",
+    "styled-components": "^5.2.0",
     "ts-node": "^9.1.1"
   },
   "peerDependencies": {
