--- a/packages/@sanity/imagetool/tsconfig.json
+++ b/packages/@sanity/imagetool/tsconfig.json
@@ -1,13 +1,13 @@
 {
-  "extends": "../../../tsconfig",
-  "include": ["./src/**/*"],
+  "extends": "../../../tsconfig.settings",
+  "include": ["./src/"],
   "compilerOptions": {
     "composite": true,
     "strict": false,
     "allowJs": true,
-    "emitDeclarationOnly": true,
     "jsx": "react",
-    "rootDir": "./src",
-    "outDir": "./dist/dts"
+    "declarationDir": "./lib/dts/",
+    "rootDir": "./",
+    "outDir": "./lib/dts/"
   }
 }
