WIP: build(initial-value-templates): build using `pkg-utils`

--- a/packages/@sanity/initial-value-templates/package.json
+++ b/packages/@sanity/initial-value-templates/package.json
@@ -2,16 +2,27 @@
   "name": "@sanity/initial-value-templates",
   "version": "2.29.5",
   "description": "Build templates for initial values",
-  "main": "./lib/index.js",
-  "types": "./dist/dts",
+  "main": "./lib/index.cjs",
+  "module": "./lib/index.js",
+  "exports": {
+    ".": {
+      "source": "./src/index.ts",
+      "require": "./lib/index.cjs",
+      "default": "./lib/index.js"
+    }
+  },
+  "types": "./lib/dts/src/index.d.ts",
   "author": "Sanity.io <hello@sanity.io>",
   "engines": {
     "node": ">=12.0.0"
   },
   "license": "MIT",
   "scripts": {
+    "build": "../../../bin/pkg-utils bundle --tsconfig tsconfig.lib.json",
+    "clean": "rimraf lib coverage",
+    "prebuild": "yarn clean",
     "test": "jest",
-    "clean": "rimraf lib coverage"
+    "watch": "../../../bin/pkg-utils bundle --tsconfig tsconfig.lib.json --watch"
   },
   "keywords": [
     "sanity",
@@ -30,13 +41,13 @@
     "@sanity/icons": "^1.2.6",
     "@sanity/util": "2.29.5",
     "@types/lodash": "^4.14.149",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.21",
     "oneline": "^1.0.3"
   },
   "devDependencies": {
     "@sanity/schema": "2.29.3",
     "@sanity/types": "2.29.5",
-    "rimraf": "^2.7.1"
+    "rimraf": "^3.0.2"
   },
   "repository": {
     "type": "git",
