WIP: build(language-filter): build using `pkg-utils`

--- a/packages/@sanity/language-filter/.gitignore
+++ b/packages/@sanity/language-filter/.gitignore
@@ -1,3 +1,12 @@
-lib
-node_modules
-dist
+# Logs
+/logs
+*.log
+
+# Coverage directory used by tools like istanbul
+/coverage
+
+# Dependency directories
+/node_modules
+
+# Compiled code
+/lib
