--- a/packages/@sanity/language-filter/package.json
+++ b/packages/@sanity/language-filter/package.json
@@ -2,9 +2,26 @@
   "name": "@sanity/language-filter",
   "version": "2.29.8",
   "description": "A Sanity plugin that supports filtering localized fields by language",
-  "main": "index.js",
+  "main": "./lib/filter-fields.cjs",
+  "module": "./lib/filter-fields.js",
+  "exports": {
+    ".": {
+      "source": "./src/filter-fields.js",
+      "require": "./lib/filter-fields.cjs",
+      "default": "./lib/filter-fields.js"
+    },
+    "./SelectLanguageProvider": {
+      "source": "./src/SelectLanguageProvider.tsx",
+      "require": "./lib/SelectLanguageProvider.cjs",
+      "default": "./lib/SelectLanguageProvider.js"
+    }
+  },
+  "types": "./lib/dts/src/filter-fields.js",
   "scripts": {
-    "clean": "rimraf lib dest"
+    "build": "../../../bin/pkg-utils bundle",
+    "clean": "rimraf lib",
+    "prebuild": "yarn clean",
+    "watch": "../../../bin/pkg-utils bundle --watch"
   },
   "keywords": [
     "sanity",
@@ -18,8 +35,12 @@
     "@sanity/icons": "^1.2.6",
     "@sanity/types": "2.29.5",
     "@sanity/ui": "^0.37.9",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.21",
     "rxjs": "^6.5.3"
+  },
+  "devDependencies": {
+    "prop-types": "^15.6.0",
+    "react": "17.0.2"
   },
   "peerDependencies": {
     "prop-types": "^15.3",
