WIP: build(mutator): build using `pkg-utils`

--- a/packages/@sanity/mutator/.gitignore
+++ b/packages/@sanity/mutator/.gitignore
@@ -1,15 +1,12 @@
 # Logs
+/logs
 *.log
 
-# Compiled files
-lib
-
 # Coverage directory used by tools like istanbul
-coverage
+/coverage
 
 # Dependency directories
-node_modules
+/node_modules
 
-.vscode
-
-dist
+# Compiled code
+/lib
