--- a/packages/@sanity/mutator/tsconfig.lib.json
+++ b/packages/@sanity/mutator/tsconfig.lib.json
@@ -1,6 +1,13 @@
 {
   "extends": "../../../tsconfig.settings",
-  "include": ["./perf/", "./src/", "./test/"],
+  "include": ["./src/"],
+  "exclude": [
+    "./src/**/__fixtures__/*",
+    "./src/**/__mocks__/*",
+    "./src/**/__workshop__/*",
+    "./src/**/*.test.ts",
+    "./src/**/*.test.tsx"
+  ],
   "compilerOptions": {
     "composite": true,
     "declarationDir": "./lib/dts/",
